--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-image-slider-box": "^2.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
